--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity"/>
+        <activity android:name=".EnterEmailActivity"
+            android:theme="@style/Theme.Passkeeper.NoActionBar"/>
     </application>
 
 </manifest>
