--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,20 +10,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Passkeeper">
         <activity
+            android:name=".ui.login.SignUpActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Passkeeper.NoActionBar" />
+        <activity
             android:name=".NavActivity"
             android:exported="true"
             android:label="@string/title_activity_nav"
+            android:theme="@style/Theme.Passkeeper.NoActionBar">
+
+        </activity>
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:exported="true"
             android:theme="@style/Theme.Passkeeper.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".LoginActivity"
-            android:exported="true"
-            android:theme="@style/Theme.Passkeeper.NoActionBar">
         </activity>
         <activity android:name=".MainActivity" />
     </application>
