--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,22 +13,21 @@
             android:name=".ui.login.SignUpActivity"
             android:exported="false"
             android:theme="@style/Theme.Passkeeper.NoActionBar" />
-        <activity
-            android:name=".NavActivity"
-            android:exported="true"
-            android:label="@string/title_activity_nav"
-            android:theme="@style/Theme.Passkeeper.NoActionBar">
 
-        </activity>
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Passkeeper.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Passkeeper.NoActionBar">
         </activity>
     </application>
 
