--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
     buildFeatures {
         viewBinding true
     }
+    compileSdkVersion 31
 }
 
 dependencies {
@@ -47,4 +48,5 @@ dependencies {
     implementation "com.leinardi.android:speed-dial:3.2.0"
     implementation 'com.squareup.retrofit2:retrofit:2.1.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.github.travijuu:numberpicker:1.0.7'
 }
