--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,12 @@
         android:theme="@style/Theme.Passkeeper"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ui.record.ViewRecordActivity"
+            android:exported="false" />
+        <activity
             android:name=".EntranceActivity"
-            android:theme="@android:style/Theme.NoDisplay"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@android:style/Theme.NoDisplay">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
