--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name=".ui.record.ViewRecordActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.Passkeeper.NoActionBar" />
         <activity
             android:name=".EntranceActivity"
             android:exported="true"
