--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,10 @@
             android:exported="false"
             android:theme="@style/Theme.Passkeeper.NoActionBar" />
         <activity
+            android:name=".ui.login.ForgotPasswordActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Passkeeper.NoActionBar" />
+        <activity
             android:name=".ui.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Passkeeper.NoActionBar" />
