[fix] makes Thi happy

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,10 @@
             android:theme="@style/Theme.Passkeeper.NoActionBar"
             android:exported="false" />
         <activity
+            android:name=".ui.shareGroup.listRecordShareGroup.ListRecordShareGroupActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Passkeeper.NoActionBar" />
+        <activity
             android:name=".ui.record.edit.EditRecordActivity"
             android:exported="false"
             android:theme="@style/Theme.Passkeeper.NoActionBar" />
