--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.listMemberGroup.ListMemberGroupActivity"
+            android:name=".ui.listGroup.listMemberGroup.ListMemberGroupActivity"
             android:theme="@style/Theme.Passkeeper.NoActionBar"
             android:exported="false" />
         <activity
